# sentiment_analysis

./: .env.example  .gitignore  README.md  main.py  params.yaml  pyproject.toml  requirements.txt  templates.py
results/: output.txt  tweets_results.csv
slisten_pipeline/: stage_01.py
src/: pipeline.py
src/alerts/: email.py
src/sentiment/: sentiment_analyzer.py
tests/: test_pipeline.py
utils/collectors/: twitter_collector.py
utils/helpers/: email_alerts.py
utils/models/: sentiment_analyzer.py
utils/preprocessing/: text_cleaner.py
